--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.1",
