--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.1",
+    "reactstrap": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
